# asset-management-mlops

./: .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
airflow/: docker-compose.yaml
airflow/dags/: etl_dag.py
azure/: deploy.sh
azure/terraform/: main.tf  terraform.tfvars
data/processed/: AAPL.csv  AMZN.csv  BND.csv  BTC-USD.csv  MSFT.csv  SPY.csv  correlation_matrix.csv
data/raw/: AAPL.csv  AMZN.csv  BND.csv  BTC-USD.csv  MSFT.csv  SPY.csv
docs/: business_case.md  usage_guide.md
screenshots/: README.md
src/: api.py  config.py  dashboard.py  etl.py  modeling.py  monitoring.py
